--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,37 @@
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700" rel="stylesheet">
   </head>
 
   <body>
 
-    <!-- Top nav bar (fixed) -->
-    <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
-      <span class="header">Tweeter</span>
-    </nav>
-
+    
     <!-- Page-specific (main) content here -->
     <main class="container">
+      <section class="new-tweet">
+        <h2 class="new-tweet-header">Compose Tweet</h2>
+        <form method="POST" action="/tweets/">
+          <textarea name="text" placeholder="What are you humming about?" class="textarea-new-tweet"></textarea>
+          <input type="submit" value="Tweet" class="submit-tweet">
+          <span class="counter">140</span>
+        </form>
+      </section>
     </main>
-
+  
+      <!-- Top nav bar (fixed) -->
+      <nav id="nav-bar">
+        <img class="logo" src="/images/bird.png">
+        <span class="header">Tweeter</span>
+      </nav>
   </body>
 </html>
