--- a/public/index.html
+++ b/public/index.html
@@ -5,25 +5,26 @@
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="./vendor/normalize-4.1.1.css" type="text/css" />
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/new-tweet.css" type="text/css" />
 
     <!-- External JS -->
-    <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
+    <script type="text/javascript" src="./vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
-    <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="./scripts/app.js"></script>
+    <script type="text/javascript" src="./scripts/composer-char-counter.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700" rel="stylesheet">
   </head>
 
   <body>
 
-    
+
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
@@ -35,10 +36,10 @@
         </form>
       </section>
     </main>
-  
+
       <!-- Top nav bar (fixed) -->
       <nav id="nav-bar">
-        <img class="logo" src="/images/bird.png">
+        <img class="logo" src="./images/bird.png">
         <span class="header">Tweeter</span>
       </nav>
   </body>
