--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="./vendor/normalize-4.1.1.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
 
     <!-- App CSS -->
     <link rel="stylesheet" href="./styles/layout.css" type="text/css" />
@@ -14,19 +17,22 @@
 
     <!-- External JS -->
     <script type="text/javascript" src="./vendor/jquery-2.2.3.min.js"></script>
+    <script src="https://use.fontawesome.com/2ec64a58f7.js"></script>
+
 
     <!-- App JS -->
     <script type="text/javascript" src="./scripts/app.js"></script>
     <script type="text/javascript" src="./scripts/composer-char-counter.js"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,700" rel="stylesheet">
+    <meta charset="utf-8">
   </head>
 
   <body>
 
 
     <!-- Page-specific (main) content here -->
-    <main class="container">
+    <main class="container center-me">
       <section class="new-tweet">
         <h2 class="new-tweet-header">Compose Tweet</h2>
         <form method="POST" action="/tweets/">
@@ -34,6 +40,24 @@
           <input type="submit" value="Tweet" class="submit-tweet">
           <span class="counter">140</span>
         </form>
+      </section>
+      <section class="tweet-container-class" id="tweet-container">
+        <article class="tweet-box">
+          <header class="tweet-header">
+            <img class="user-image" src="./images/user.png">
+            <h2 class="username">Bill Fields</h2>
+            <h3 class="handle">@mrfields</h3>
+          </header>
+          <p class="tweet-text">Little tweet here</p>
+          <footer class="time-ago">
+            10 days ago
+          </footer>
+          <div class="icon">
+            <i class="fa fa-flag" aria-hidden="true"></i>
+            <i class="fa fa-retweet" aria-hidden="true"></i>
+            <i class="fa fa-heart" aria-hidden="true"></i>
+          </div>
+        </article>
       </section>
     </main>
 
