--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,6 @@
   </head>
 
   <body>
-
-
-    <!-- Page-specific (main) content here -->
     <main class="container center-me">
       <section class="new-tweet">
         <h2 class="new-tweet-header">Compose Tweet</h2>
@@ -42,29 +39,12 @@
         </form>
       </section>
       <section class="tweet-container-class" id="tweet-container">
-        <article class="tweet-box">
-          <header class="tweet-header">
-            <img class="user-image" src="./images/user.png">
-            <h2 class="username">Bill Fields</h2>
-            <h3 class="handle">@mrfields</h3>
-          </header>
-          <p class="tweet-text">Little tweet here</p>
-          <footer class="time-ago">
-            10 days ago
-          </footer>
-          <div class="icon">
-            <i class="fa fa-flag" aria-hidden="true"></i>
-            <i class="fa fa-retweet" aria-hidden="true"></i>
-            <i class="fa fa-heart" aria-hidden="true"></i>
-          </div>
-        </article>
+        <!-- content goes here -->
       </section>
     </main>
-
-      <!-- Top nav bar (fixed) -->
-      <nav id="nav-bar">
-        <img class="logo" src="./images/bird.png">
-        <span class="header">Tweeter</span>
-      </nav>
+    <nav id="nav-bar">
+      <img class="logo" src="./images/bird.png">
+      <span class="header">Tweeter</span>
+    </nav>
   </body>
 </html>
