added tweets to refresh live on the page without refreshing the entire page

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
 
   <body>
     <main class="container center-me">
+      <div class="infoForUser" ></div>
       <section class="new-tweet">
         <h2 class="new-tweet-header">Compose Tweet</h2>
         <form method="POST" action="/tweets/">
