--- a/public/index.html
+++ b/public/index.html
@@ -30,15 +30,17 @@
 
   <body>
     <main class="container center-me">
-      <div class="infoForUser" ></div>
-      <section class="new-tweet">
-        <h2 class="new-tweet-header">Compose Tweet</h2>
-        <form method="POST" action="/tweets/">
-          <textarea name="text" placeholder="What are you humming about?" class="textarea-new-tweet"></textarea>
-          <input type="submit" value="Tweet" class="submit-tweet">
-          <span class="counter">140</span>
-        </form>
-      </section>
+      <div class="wrapper">
+        <div class="infoForUser" ></div>
+        <section class="new-tweet">
+          <h2 class="new-tweet-header">Compose Tweet</h2>
+          <form method="POST" action="/tweets/">
+            <textarea name="text" placeholder="What are you humming about?" class="textarea-new-tweet"></textarea>
+            <input type="submit" value="Tweet" class="submit-tweet">
+            <span class="counter">140</span>
+          </form>
+        </section>
+      </div>
       <section class="tweet-container-class" id="tweet-container">
         <!-- content goes here -->
       </section>
@@ -46,6 +48,10 @@
     <nav id="nav-bar">
       <img class="logo" src="./images/bird.png">
       <span class="header">Tweeter</span>
+      <div class="toggleButton">
+        <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+        <p class="navP">Compose</p>
+      </div>
     </nav>
   </body>
 </html>
